# mindmastery

./: .gitignore  FLUTTER_INTEGRATION_PLAN.md  README.md  cli.py  demo.py  mindmastery.py  pyproject.toml
core/: __init__.py
llm/: prompts.py
models/: __init__.py  schemas.py
src/mindmastery/: __init__.py  cli.py
src/mindmastery/core/: decomposer.py
src/mindmastery/llm/: __init__.py  client.py  prompts.py
src/mindmastery/storage/: __init__.py  progress.py
src/mindmastery/visualization/: __init__.py  renderer.py
visualization/: renderer.py
